Added getHoldsInRange method to Hangboard class, gives holdList that takes into account grip filter and min/max difficulty range.

--- a/app/src/main/res/layout/content_filter.xml
+++ b/app/src/main/res/layout/content_filter.xml
@@ -261,7 +261,7 @@
                 android:layout_weight="1"
                 android:paddingLeft="20dp"
                 android:paddingRight="20dp"
-                android:text="figure out something" />
+                android:text="random chance to pick alternate hold (percent)" />
 
 
         </LinearLayout>
