--- a/app/src/main/res/layout/content_filter.xml
+++ b/app/src/main/res/layout/content_filter.xml
@@ -98,6 +98,49 @@
 
         </LinearLayout>
 
+        <LinearLayout
+            android:id="@+id/alternateFactorLinearLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <EditText
+                android:id="@+id/alternateFactorEditText"
+                android:layout_width="50dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="0"
+                android:hint="hold search alternate factor"
+                android:inputType="numberSigned"
+                android:textAlignment="center"
+                android:textStyle="bold" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="0"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/textView14"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="alternate factor, how far out of min/max range alternating holds are searched" />
+
+                <SeekBar
+                    android:id="@+id/alternateFactorSeekBar"
+                    style="@style/Widget.AppCompat.SeekBar.Discrete"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_gravity="center"
+                    android:layout_weight="3"
+                    android:max="8"
+                    android:progress="1"
+                    android:progressTint="#B38867" />
+            </LinearLayout>
+
+
+        </LinearLayout>
+
             <TextView
                 android:id="@+id/textView10"
                 android:layout_width="wrap_content"
@@ -252,7 +295,7 @@
                 android:layout_weight="1"
                 android:paddingLeft="20dp"
                 android:paddingRight="20dp"
-                android:text="sort workout holds from easiest to hardest" />
+                android:text="sort workout holds" />
 
 
         </LinearLayout>
@@ -271,26 +314,27 @@
                 android:layout_gravity="center_vertical"
                 android:layout_weight="1"
                 android:text="Holds in "
-                android:textAlignment="center" />
+                android:textAlignment="center"
+                android:textSize="16sp"
+                android:textStyle="bold" />
 
             <RadioGroup
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:layout_weight="1"
-                android:accessibilityLiveRegion="l">
+                android:layout_weight="1">
 
                 <RadioButton
-                    android:id="@+id/ascencindRadioButton"
+                    android:id="@+id/ascendingRadioButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="ascencind" />
+                    android:text="ascending" />
 
                 <RadioButton
                     android:id="@+id/descendingRadioButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="descendinc" />
+                    android:text="descending" />
             </RadioGroup>
 
 
@@ -301,7 +345,9 @@
                 android:layout_gravity="center_vertical"
                 android:layout_weight="1"
                 android:text="order by"
-                android:textAlignment="center" />
+                android:textAlignment="center"
+                android:textSize="16sp"
+                android:textStyle="bold" />
 
 
             <RadioGroup
