FilterActivity ui is quite ready

--- a/app/src/main/res/layout/content_filter.xml
+++ b/app/src/main/res/layout/content_filter.xml
@@ -319,6 +319,7 @@
                 android:textStyle="bold" />
 
             <RadioGroup
+                android:id="@+id/orderRadioGroup"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
@@ -351,6 +352,7 @@
 
 
             <RadioGroup
+                android:id="@+id/byWhatRadioGroup"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1">
