--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -26,7 +26,7 @@
 
     <item android:id="@+id/action_filter"
         android:icon="@drawable/filter_icon"
-        android:title="Grade filter"
+        android:title="Custom grade"
         app:showAsAction="ifRoom"
         />
 <!--
