--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -58,12 +58,12 @@
                 android:layout_height="wrap_content"
                 android:alpha="0.9"
                 android:contentDescription="@string/finger_image" />
-
+<!--
             <ImageView
                 android:id="@+id/templateFingerImageView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:alpha="0.9" />
+                android:alpha="0.9" />-->
         </RelativeLayout>
 
 
