Hold values to strong ant hangboard added, changed FilterActivity's progressbar colors.

--- a/app/src/main/res/layout/content_filter.xml
+++ b/app/src/main/res/layout/content_filter.xml
@@ -48,8 +48,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:max="20"
-                    android:progress="5"
-                    android:progressTint="@color/slate" />
+                    android:progress="5" />
             </LinearLayout>
 
 
@@ -90,9 +89,9 @@
                     android:layout_height="0dp"
                     android:layout_gravity="center"
                     android:layout_weight="3"
+                    android:backgroundTint="@color/colorAccent"
                     android:max="20"
-                    android:progress="5"
-                    android:progressTint="#B38867" />
+                    android:progress="5" />
             </LinearLayout>
 
 
@@ -135,24 +134,24 @@
                     android:layout_weight="3"
                     android:max="6"
                     android:progress="1"
-                    android:progressTint="#B38867" />
+                    android:progressTint="@color/slate" />
             </LinearLayout>
 
 
         </LinearLayout>
 
-            <TextView
-                android:id="@+id/textView10"
-                android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:layout_gravity="center"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="10dp"
-                android:layout_weight="1"
-                android:text="Choose the grips to use in workouts"
-                android:textAlignment="center"
-                android:textSize="16sp"
-                android:textStyle="bold" />
+        <TextView
+            android:id="@+id/textView10"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:layout_weight="1"
+            android:text="Grip types used in workouts"
+            android:textAlignment="center"
+            android:textSize="16sp"
+            android:textStyle="bold" />
 
         <LinearLayout
             android:layout_width="match_parent"
